--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -1,1 +1,15 @@
 $base-color: #c6538c;
+
+/* HSL */
+$lightGreen: hsla(99%, 100%, 79%, 1);
+$whiteGreen: hsla(105%, 55%, 96%, 1);
+$midGreen: hsla(89%, 62%, 67%, 1);
+$goodGreen: hsla(114%, 80%, 84%, 1);
+$darkGreen: hsla(118%, 21%, 48%, 1);
+
+/* RGB */
+$lightGreen: rgba(185, 255, 147, 1);
+$whiteGreen: rgba(241, 250, 238, 1);
+$midGreen: rgba(171, 223, 117, 1);
+$goodGreen: rgba(189, 247, 183, 1);
+$darkGreen: rgba(98, 148, 96, 1);
